# hendley

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: api-reference.md  comet-0402-migration.md  fusion-notes.md
src/hendley/: __init__.py  __main__.py  alternates.py  cli.py  client.py  config.py  fusion.py  scr.py
src/henley/: client.py  config.py
tests/: test_alternates.py  test_auth.py  test_fusion.py  test_scr.py
